[project]
name = "liftoff"
version = "0.5.0"
description = "Experiment launcher; AGI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Tudor Berariu", email = "tudor.berariu@gmail.com" },
]
dependencies = [
    "numpy",
    "gitpython",
    "pyyaml",
    "tabulate",
    "termcolor",
    "pyperclip>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/tudor-berariu/liftoff"

[project.scripts]
liftoff-prepare = "liftoff.cmd:prepare"
liftoff = "liftoff.cmd:liftoff"
liftoff-abort = "liftoff.cmd:abort"
liftoff-procs = "liftoff.cmd:procs"
liftoff-clean = "liftoff.cmd:clean"
liftoff-status = "liftoff.cmd:status"
liftoff-lock = "liftoff.cmd:lock"
liftoff-unlock = "liftoff.cmd:unlock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["liftoff"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | blib2to3
  | tests/data
  | profiling
)/
'''
