[project]
name = "liftoff"
version = "0.5.1"
description = "Experiment launcher; AGI assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Tudor Berariu", email = "tudor.berariu@gmail.com" },
]
dependencies = [
    "numpy",
    "gitpython",
    "pyyaml",
    "tabulate",
    "termcolor",
    "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]

[project.urls]
Homepage = "https://github.com/tudor-berariu/liftoff"

[project.scripts]
liftoff-prepare = "liftoff.cmd:prepare"
liftoff = "liftoff.cmd:liftoff"
liftoff-abort = "liftoff.cmd:abort"
liftoff-procs = "liftoff.cmd:procs"
liftoff-clean = "liftoff.cmd:clean"
liftoff-status = "liftoff.cmd:status"
liftoff-lock = "liftoff.cmd:lock"
liftoff-unlock = "liftoff.cmd:unlock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["liftoff"]

[tool.ruff.lint]
# pycodestyle, Pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort,
select = [ "E", "F", "UP", "B", "SIM", "I" ]
ignore = [
  "UP032",  # use f-string instead of `format` call
]
